# agent-history

./: Cargo.toml  deploy.sh
docs/specs/: search.md
src/: backend.rs  cli.rs  content.rs  history.rs  main.rs  output.rs
tests/: search.rs
